<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_view_bkg" >
    <RadioGroup
        android:id="@+id/navi_switcher"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:checkedButton="@+id/navi_switcher_item_food"
        android:background="@drawable/diabetes_nav_background">
        <RadioButton
            android:id="@+id/navi_switcher_item_food"
            style="@style/radio_btn_style"
            android:text="@string/food" />
        <RadioButton
            android:id="@+id/navi_switcher_item_drug"
            style="@style/radio_btn_style"
            android:text="@string/drug" />
        <RadioButton
            android:id="@+id/navi_switcher_item_glucose"
            style="@style/radio_btn_style"
            android:text="@string/glucose" />
        <RadioButton
            android:id="@+id/navi_switcher_item_sports"
            style="@style/radio_btn_style"
            android:text="@string/sports" />
        <RadioButton
            android:id="@+id/navi_switcher_item_doctor"
            style="@style/radio_btn_style"
            android:text="@string/doctor" />
    </RadioGroup>



    <android.support.v4.view.ViewPager
        android:id="@+id/navi_view_pager"
        android:layout_above="@id/navi_switcher"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dip" />
</RelativeLayout>